--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,34 +1,33 @@
-# This is a basic workflow to help you get started with Actions
+name: Demo
 
-name: CI
-
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
       - name: Start containers
         run: docker-compose up --build -d
 
-      # Runs a set of commands using the runners shell
+      - name: Check running containers
+        run: docker ps -a
+
       - name: Run demo.sh script
         run: ./demo.sh
+        shell: bash
+
+      - name: Show container logs
+        run: docker-compose logs
+
+      - name: Stop containers
+        if: always()
+        run: docker-compose down
